# hecanmakethatshot-

./: .gitignore  Cargo.toml  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  store.js  styles.css
frontend/src/pages/: HomePage.jsx  ReaderPage.jsx
sendit/: README.md  pyproject.toml  sendit.py
src/: main.rs  manga.rs  marked.rs  relay.rs  tool.rs
static/: index.html  index.js  pm.html  pm.js
