[package]
name = "yorknew"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
bytes = "1"
futures-util = "0.3"
tokio-stream = "0.1"
